--- a/MainBody/intro.tex
+++ b/MainBody/intro.tex
@@ -1,2 +1,31 @@
-\subsection{Aims and Goals}
-Aims and Goals go here?
+\ac{WHO} figures claim that as as of 2012, there are 285 million people suffering from visual imparements~\cite{whoblindness}, 30 million of whom are blind. The \ac{WHO} also state that 90\% of the visually impared live in developing countries. Combined with statistics from the guide dogs for the blind association, who claim that the life-time cost of training and keeping a guide dog is around £50,000, a sad picture is painted the majority who are unable to afford visual aids.
+
+\section{Aims and Goals}
+This project aims to research and develop a methods of conveying visual information without the user of the system requiring a functional visual system. The study investigates both navigational and semantic modes of operation, and the different techniques associated with each implementation.
+
+The goal of the project is to provide a functional system, able to be used to effectivley navigate around a room and avoid obstacles without the use of eyes.  
+
+\section{Intended Audience}
+The main intended audience for this project is the visually impared. It is anticipated that the "tech savvy" visually impared would be interested in trialling the prototypes, both for day-to-day use, and to assist in further development.
+
+The system does not (initially) intend to replace all other forms of visual assistance - rather, it intends to assist those who are unable to afford luxuries such as Guide-dogs or Guide-horses~\cite{guidehorse}. A low-cost system that is capable of assisting a user in navigating a room and detecting obsticles has the potential to be life changing - even if only a small fraction of a normal, functional visual system can be imitated, 0.01\% is infinitley greater than 0.00\%.
+
+\section{Project Scope}
+The project has a fairly broad scope, and includes:
+\begin{enumerate}
+    \item Image Segmentation \hfill \\
+    This deals with the extracting the input image, and extracting an object of interest
+    \item Descriptor Extraction \hfill \\
+    This is the extraction of descriptors from the object of interest (obtained from step 1)
+    \item Descriptor Sonification \hfill \\
+    Sonification of the output from step 2.
+\end{enumerate}
+
+Components/considerations \textbf{outside} of the scope of this project are:
+
+\begin{enumerate}
+    \item Ethical Considerations \hfill \\
+    Medical Trials/patient interviews are currently outside of scope of the project, and could be considered at a later date.
+    \item Robust Testing \hfill \\
+\end{enumerate}
+
