--- a/references.bib
+++ b/references.bib
@@ -6,9 +6,41 @@
   urldate = {2015-04-06}
 }
 
+@online{guidehorse,
+    author = {The Guidehorse Foundation},
+    year = 2005,
+    url = {http://www.guidehorse.com/},
+    urldate = {2015-04-21}
+}
+
 @online{xtion,
     author = {ASUSTek Computer Inc.},
     title = {Xtion PRO LIVE},
     url = {http://www.asus.com/uk/Multimedia/Xtion_PRO_LIVE/},
+    urldate = {2015-01-29}
+}
+
+@online{whoblindness,
+  author = {World Health Organization},
+  title = {Visual imparement and blindness},
+  year = 2014,
+  url = {http://www.who.int/mediacentre/factsheets/fs282/en/},
+  urldate = {2015-01-28}
+}
+
+
+@online{guidedogcost,
+  author = {Guide Dogs for the Blind Association},
+  title = {Fact File},
+  year = 2014,
+  url = {http://www.guidedogs.org.uk/aboutus/guide-dogs-organisation/facts},
+  urldate = {2015-01-28}
+}
+
+@online{seewithsoundns,
+    author = {Joanna Carver, New Scientist},
+    title = {Camera-to-sound app lets blind people 'see'},
+    year = 2012,
+    url = {http://www.newscientist.com/blogs/nstv/2012/11/seeing-with-sound.html},
     urldate = {2015-01-29}
 }
