--- a/acronyms.tex
+++ b/acronyms.tex
@@ -1,4 +1,10 @@
 \section*{List of Acronyms}
 \begin{acronym}
 \acro{WHO}{World Health Organisation}
+\acro{IR}{Infra-red}
+\acro{RGB-D}{Red, Green, Blue and Depth}
+\acro{FFT}{Fast-Fourier transform}
+\acro{VAS}{Virtual Acoustic Space}
+\acro{HRTF}{Head-related transfer function}
+\acro{JVM}{Java Virtual Machine}
 \end{acronym}
