--- a/main.tex
+++ b/main.tex
@@ -8,6 +8,7 @@
 \usepackage{caption}
 \usepackage{subcaption}
 \usepackage{wasysym}
+\usepackage{listings}
 \usepackage[printonlyused]{acronym}
 
 \usepackage[
