--- a/references.bib
+++ b/references.bib
@@ -6,6 +6,14 @@
   urldate = {2015-04-06}
 }
 
+@online{videosegment,
+    title = {The Video Segmentation Project},
+    author = {Google Research, Georgia Institute of Technology},
+    url = {https://github.com/videosegmentation/video_segment},
+    year = {2014},
+    urldate = {2015-04-24}
+}
+
 @online{guidehorse,
     author = {The Guidehorse Foundation},
     year = 2005,
@@ -43,4 +51,93 @@
     year = 2012,
     url = {http://www.newscientist.com/blogs/nstv/2012/11/seeing-with-sound.html},
     urldate = {2015-01-29}
+}
+
+@article{
+    vOICe,
+    author = {Peter B. L. Meijer},
+    title = {An Experimental System for Auditory Image Representations},
+    year = 1992,
+    journal = {IEEE Transactions on Biomedical Engineering},
+    volume = {2},
+    number = {2},
+    pages = {112--121}
+}
+
+@misc{
+    aphex-equation,
+    author = {Aphex Twin},
+    title = {$\Delta M_i^{-1} = - \alpha \sum_{n=1}^N D_i \left[ n \right] \left[ \sum_{j \in C \left[ i \right]}^{} F_{ji} \left[ n -1 \right] + Fext_i \left[ n^{-1} \right] \right]$},
+    year = {2005}
+}
+
+@article{
+    twoviews,
+    author = {Marcus E. Raichle},
+    title = {Two views of brain function},
+    year = {2010},
+    journal = {Trends in Cognitive Science},
+    pages = {180 -- 190}
+
+}
+
+@INPROCEEDINGS{vas, 
+author={Gonzalez-Mora, J.L. and Rodriguez-Hernandez, A. and Burunat, E. and Martin, F. and Castellano, M.A.}, 
+booktitle={Information and Communication Technologies, 2006. ICTTA '06. 2nd}, 
+title={Seeing the world by hearing: Virtual Acoustic Space (VAS) a new space perception system for blind people.}, 
+year={2006}, 
+month={}, 
+volume={1}, 
+pages={837-842}, 
+keywords={acoustic signal processing;handicapped aids;virtual reality;Virtual Acoustic Space;audible image;blind people;head related transfer function processed sounds;portable electronic prototype;space perception system;virtual acoustic world;Acoustic emission;Auditory system;Brain modeling;Head;Physiology;Prototypes;Research and development;Shape;Transfer functions;Virtual prototyping}, 
+doi={10.1109/ICTTA.2006.1684482},}
+
+
+@online{hrtf-diagram,
+ author  = {Wikimedia Commons},
+ title   = {Hrtf diagram.png},
+ year    = {2005},
+ urldate = {2015-04-24},
+ url     = {https://commons.wikimedia.org/wiki/File:Hrtf_diagram.png},
+}
+
+
+@article{
+    capacity-ear,
+    title = {The Informational Capacity of the Human Ear},
+    author = {H. Jacobson},
+    journal = {Science},
+    pages = {143 -- 144},
+    year = {1950},
+    volume = {112},
+    issue = {2901},
+}
+
+@article{jacobson1951informational,
+  title={The informational capacity of the human eye},
+  author={Jacobson, Homer},
+  journal={Science},
+  volume={113},
+  number={2933},
+  pages={292--293},
+  year={1951},
+  publisher={American Association for the Advancement of Science}
+}
+
+@article{jacobson1950informational,
+  title={The informational capacity of the human ear},
+  author={Jacobson, Homer},
+  journal={Science},
+  volume={112},
+  number={2901},
+  pages={143--144},
+  year={1950},
+  publisher={American Association for the Advancement of Science}
+}
+
+@inproceedings{thevibe,
+  title={Visuo-auditory sensory substitution for mobility assistance: testing TheVIBE},
+  author={Durette, Barth{\'e}l{\'e}my and Louveton, Nicolas and Alleysson, David and H{\'e}rault, Jeanny},
+  booktitle={Workshop on Computer Vision Applications for the Visually Impaired},
+  year={2008}
 }
