--- a/acronyms.tex
+++ b/acronyms.tex
@@ -3,8 +3,10 @@
 \acro{WHO}{World Health Organisation}
 \acro{IR}{Infra-red}
 \acro{RGB-D}{Red, Green, Blue and Depth}
+\acro{RGB}{Red, Green and Blue}
 \acro{FFT}{Fast-Fourier transform}
 \acro{VAS}{Virtual Acoustic Space}
 \acro{HRTF}{Head-related transfer function}
 \acro{JVM}{Java Virtual Machine}
+\acro{FOV}{Field of View}
 \end{acronym}
