--- a/references.bib
+++ b/references.bib
@@ -6,6 +6,15 @@
   urldate = {2015-04-06}
 }
 
+@online{matlabwrapper,
+    title = {Matlab Wrapper for OpenNI 2.2},
+    author = {Camillo Taylor},
+    url = {http://uk.mathworks.com/matlabcentral/fileexchange/42127-matlab-wrapper-for-openni-2-2},
+    urldate = {2015-04-24},
+    year = {2013}
+}
+    
+
 @online{videosegment,
     title = {The Video Segmentation Project},
     author = {Google Research, Georgia Institute of Technology},
@@ -21,11 +30,33 @@
     urldate = {2015-04-21}
 }
 
+@online{guidedog-count,
+    author = {Guide Dogs for the Blind Association},
+    year = 2014,
+    url = {http://www.guidedogs.org.uk/aboutus/guide-dogs-organisation/facts},
+    urldate = {2015-04-25}
+}
+
+
+@online{uk-blind,
+    author = {Royal National Institute of Blind People},
+    year = {2014},
+    url = {https://help.rnib.org.uk/help/newly-diagnosed-registration/registering-sight-loss/statistics},
+    urldate = {2015-04-25}
+}
+
 @online{xtion,
     author = {ASUSTek Computer Inc.},
     title = {Xtion PRO LIVE},
     url = {http://www.asus.com/uk/Multimedia/Xtion_PRO_LIVE/},
     urldate = {2015-01-29}
+}
+
+@online{xtion-spec,
+    author = {ASUSTek Computer Inc.},
+    title = {Xtion PRO LIVE},
+    url = {http://www.asus.com/uk/Multimedia/Xtion_PRO_LIVE/specifications},
+    urldate = {2015-04-26}
 }
 
 @online{whoblindness,
@@ -44,6 +75,30 @@
   url = {http://www.guidedogs.org.uk/aboutus/guide-dogs-organisation/facts},
   urldate = {2015-01-28}
 }
+
+@online{
+    afbff,
+    title = {Facts and Figures about issues around sight loss},
+    url = {https://www.actionforblindpeople.org.uk/about-us/media-centre/facts-and-figures-about-issues-around-sight-loss/},
+    year = 2006,
+    urldate = {2015-04-25}
+}
+
+@online{
+    worldblindness,
+    title = {World Blindness Overview},
+    url = {http://www.cureblindness.org/world-blindness/},
+    year = 2015,
+    urldate = {2015-04-25}
+}
+
+@phdthesis{mobilityenhancement,
+  author = {Jason Dowling},
+  title  = {Mobility Enhancement using Simulated Artificial Human Vision},
+  school = {Queensland University of Technology},
+  year   = {2007},
+}
+
 
 @online{seewithsoundns,
     author = {Joanna Carver, New Scientist},
@@ -140,4 +195,19 @@ doi={10.1109/ICTTA.2006.1684482},}
   author={Durette, Barth{\'e}l{\'e}my and Louveton, Nicolas and Alleysson, David and H{\'e}rault, Jeanny},
   booktitle={Workshop on Computer Vision Applications for the Visually Impaired},
   year={2008}
+}
+
+@book{hearingrange,
+  author    = {Stuart Rosen, Peter Howell},
+  title     = {Signals and Systems for Speech and Hearing},
+  publisher = {Emerald},
+  year      = {2011},
+  pages     = {163}
+}
+
+@online{pitchres,
+    url = {http://hyperphysics.phy-astr.gsu.edu/hbase/sound/earsens.html},
+    title = {Sensitivity of Human Ear},
+    author = {R. Nave},
+    urldate = {2015-04-26}
 }
